WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280712
[JSC] Do not perform String.replace(String, String) when it is not observable
https://bugs.webkit.org/show_bug.cgi?id=280712
Summary
[JSC] Do not perform String.replace(String, String) when it is not observable
Yusuke Suzuki
Reported
2024-10-01 14:46:05 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-01 14:46:19 PDT
<
rdar://problem/137082146
>
Yusuke Suzuki
Comment 2
2024-10-01 14:48:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34530
EWS
Comment 3
2024-10-01 15:59:17 PDT
Committed
284519@main
(93c1636c4e8f): <
https://commits.webkit.org/284519@main
> Reviewed commits have been landed. Closing PR #34530 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug