[JSC] Do not perform String.replace(String, String) when it is not observable https://bugs.webkit.org/show_bug.cgi?id=280712 rdar://137082146

Reviewed by Yijia Huang.

OOM semantics is "it can happen at any timing". Let's mark
String.replaec(String, String) as non MustGenerate since it only causes
out of memory error.

* Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):
* Source/JavaScriptCore/dfg/DFGMayExit.cpp:

Canonical link: https://commits.webkit.org/284519@main