Source/JavaScriptCore/dfg/DFGMayExit.cpp
@@ -309,6 +309,14 @@ ExitMode mayExitImpl(Graph& graph, Node* node, StateType& state)
         }
         break;
 
+    case StringReplaceString: {
+        if (node->child3().useKind() == StringUse) {
+            result = ExitsForExceptions;
+            break;
+        }
+        return Exits;
+    }
+
     default:
         // If in doubt, return true.
         return Exits;
